dist/LineScript-win64-20260616/tests/cases/compile_fail/http_bad_arity.lsc
main() -> i64 do
  declare s = http_server_listen()
  println(s)
  return 0
end
